# telephone

./: .gitignore  main.py  pyproject.toml  system_prompt.txt  tasks.txt
assistant/: __init__.py  assistant.py  memory.py  ollama.py  openrouter.py
stt/: stt.py
tts/: player.py  tts.py
utils/: secrets.py
